--- a/Innobedded.KrankenHause.WebSite/Views/Shared/_Layout.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Shared/_Layout.cshtml
@@ -53,7 +53,14 @@
                     <span class="phone-icon"><i class="fa fa-phone"></i> 010-060-0160</span>
                     <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 6:00 AM - 10:00 PM (Mon-Fri)</span>
                     <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></span>
-                    <span class="date-icon"><i class="fa fa-calendar-times-o"></i> <a href="#">@DateTime.Now.Hour : @DateTime.Now.Minute</a></span>
+                    @*<span class="date-icon"><i class="fa fa-calendar-times-o"></i> <a href="#">@DateTime.Now.Hour : @DateTime.Now.Minute</a></span>*@
+                <span class="fa-2x">
+                    <a href="#"><img src="~/Content/images/Flag/de.png" width="25px" height="25px" alt="Deutsch" title="Deutsch Sprache" /></a>
+                    
+                    <a href="#"><img src="~/Content/images/Flag/fa.png" width="27px" height="27px" alt="Persian" title="زبان فارسی" /></a>
+                    
+                    <a href="#"><img src="~/Content/images/Flag/en.png" width="25px" height="25px" alt="English" title="English Language"/></a>
+                </span>
                 </div>
 
             </div>
@@ -432,7 +439,7 @@
                             <p>
                                 Copyright &copy; 2018 Your Company
 
-                                | Design: Tooplate
+                                | Design and Programming: Bahman Pourgholami
                             </p>
                         </div>
                     </div>
