--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_SideNav.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_SideNav.cshtml
@@ -10,26 +10,17 @@
             </li>
             <li class="nav-level">--- Components</li>
             <li class="treeview">
-                <a class="waves-effect waves-dark" href="#!"><i class="icon-briefcase"></i><span> UI Elements</span><i class="icon-arrow-down"></i></a>
+                <a class="waves-effect waves-dark" href="#!"> <i class="icon-list"></i><span>Basic Tables</span><i class="icon-arrow-down"></i></a>
                 <ul class="treeview-menu">
                     <li>
-                        <a class="waves-effect waves-dark" onclick="tt()">
-
-                            <i class="icon-arrow-right"></i> Accordion
-
-                        </a>
-                    </li>
-                    <li><a class="waves-effect waves-dark" href="/admin/home/ShowBlock"><i class="icon-arrow-right"></i> Button</a></li>
-                    <li><a class="waves-effect waves-dark" href="label-badge.html"><i class="icon-arrow-right"></i> Label Badge</a></li>
-                    <li><a class="waves-effect waves-dark" href="bootstrap-ui.html"><i class="icon-arrow-right"></i> Grid system</a></li>
-                    <li><a class="waves-effect waves-dark" href="box-shadow.html"><i class="icon-arrow-right"></i> Box Shadow</a></li>
-                    <li><a class="waves-effect waves-dark" href="color.html"><i class="icon-arrow-right"></i> Color</a></li>
-                    <li><a class="waves-effect waves-dark" href="light-box.html"><i class="icon-arrow-right"></i> Light Box</a></li>
-                    <li><a class="waves-effect waves-dark" href="notification.html"><i class="icon-arrow-right"></i> Notification</a></li>
-                    <li><a class="waves-effect waves-dark" href="panels-wells.html"><i class="icon-arrow-right"></i> Panels-Wells</a></li>
-                    <li><a class="waves-effect waves-dark" href="tabs.html"><i class="icon-arrow-right"></i> Tabs</a></li>
-                    <li><a class="waves-effect waves-dark" href="tooltips.html"><i class="icon-arrow-right"></i> Tooltips</a></li>
-                    <li><a class="waves-effect waves-dark" href="typography.html"><i class="icon-arrow-right"></i> Typography</a></li>
+                        <a class="waves-effect waves-dark" onclick="show('Fach')"><i class="icon-arrow-right"></i> Fach</a></li>
+                    <li><a class="waves-effect waves-dark" onclick="show('Pashm')"><i class="icon-arrow-right"></i> Sex </a></li>
+                    <li><a class="waves-effect waves-dark" href="label-badge.html"><i class="icon-arrow-right"></i> Education </a></li>
+                    <li><a class="waves-effect waves-dark" href="bootstrap-ui.html"><i class="icon-arrow-right"></i> Jobs </a></li>
+                    <li><a class="waves-effect waves-dark" href="box-shadow.html"><i class="icon-arrow-right"></i> Services </a></li>
+                    <li><a class="waves-effect waves-dark" href="color.html"><i class="icon-arrow-right"></i> Insurence </a></li>
+                    <li><a class="waves-effect waves-dark" href="light-box.html"><i class="icon-arrow-right"></i> Clinic Type </a></li>
+                    
                 </ul>
             </li>
 
