Create Resources for MultiLanguage in web site Deutsch = de English =en Persisch= fa
and save all data from Menu Items and Slider Test content

--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Home/Index.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Home/Index.cshtml
@@ -46,6 +46,10 @@
 
     <script type="text/javascript">
 
+        $('#fach').click(function () {
+            //show('Fach')
+        });
+
         function show(param) {
             //   alert("HASAN");
             var Url = "/admin/";
