--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_SideNav.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_SideNav.cshtml
@@ -13,7 +13,9 @@
                 <a class="waves-effect waves-dark" href="#!"> <i class="icon-list"></i><span>Basic Tables</span><i class="icon-arrow-down"></i></a>
                 <ul class="treeview-menu">
                     <li>
-                        <a class="waves-effect waves-dark" onclick="show('Fach')"><i class="icon-arrow-right"></i> Fach</a></li>
+                        @*onclick="show('Fach')"*@
+                        <a class="waves-effect waves-dark" id="fach"><i class="icon-arrow-right"></i> Fach</a>
+                    </li>
                     <li><a class="waves-effect waves-dark" onclick="show('Pashm')"><i class="icon-arrow-right"></i> Sex </a></li>
                     <li><a class="waves-effect waves-dark" href="label-badge.html"><i class="icon-arrow-right"></i> Education </a></li>
                     <li><a class="waves-effect waves-dark" href="bootstrap-ui.html"><i class="icon-arrow-right"></i> Jobs </a></li>
