--- a/Innobedded.KrankenHause.WebSite/Views/Shared/_Layout.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Shared/_Layout.cshtml
@@ -1,6 +1,7 @@
 ﻿
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <title>Health - Medical Website Template</title>
@@ -28,6 +29,8 @@
     <link rel="stylesheet" href="/Content/css/tooplate-style.css">
 
 </head>
+
+
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
     <!-- PRE LOADER -->
@@ -53,14 +56,21 @@
                     <span class="phone-icon"><i class="fa fa-phone"></i> 010-060-0160</span>
                     <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 6:00 AM - 10:00 PM (Mon-Fri)</span>
                     <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#">info@company.com</a></span>
-                    @*<span class="date-icon"><i class="fa fa-calendar-times-o"></i> <a href="#">@DateTime.Now.Hour : @DateTime.Now.Minute</a></span>*@
-                <span class="fa-2x">
-                    <a href="#"><img src="~/Content/images/Flag/de.png" width="25px" height="25px" alt="Deutsch" title="Deutsch Sprache" /></a>
-                    
-                    <a href="#"><img src="~/Content/images/Flag/fa.png" width="27px" height="27px" alt="Persian" title="زبان فارسی" /></a>
-                    
-                    <a href="#"><img src="~/Content/images/Flag/en.png" width="25px" height="25px" alt="English" title="English Language"/></a>
-                </span>
+                    @*<span class="date-icon"><i class="fa fa-calendar-times-o"></i>
+        
+        <a href="#">@DateTime.Now.Hour : @DateTime.Now.Minute</a></span>*@
+                    <span class="fa-2x">
+
+                        <a href="@Url.Action("ChangeLanguage", "home",new { lan="de"})">
+                            <img src="~/Content/images/Flag/de.png" width="25px" height="25px" alt="Deutsch" title="Deutsch Sprache" />
+                        </a>
+
+                        <a href="@Url.Action("ChangeLanguage", "home",new { lan="fa"})">
+                        <img src="~/Content/images/Flag/fa.png" width="27px" height="27px" alt="Persian" title="زبان فارسی" /></a>
+
+                        <a href="@Url.Action("ChangeLanguage", "home",new { lan="en"})">
+                        <img src="~/Content/images/Flag/en.png" width="25px" height="25px" alt="English" title="English Language" /></a>
+                    </span>
                 </div>
 
             </div>
@@ -93,54 +103,16 @@
     <!-- HOME -->
 
 
+@{ 
 
-    <section id="home" class="slider" data-stellar-background-ratio="0.5">
-        <div class="container">
-            <div class="row">
-
-                <div class="owl-carousel owl-theme">
-                    <div class="item item-first">
-                        <div class="caption">
-                            <div class="col-md-offset-1 col-md-10">
-                                <h3>Let's make your life happier</h3>
-                                <h1>Healthy Living</h1>
-                                <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Doctors</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item item-second">
-                        <div class="caption">
-                            <div class="col-md-offset-1 col-md-10">
-                                <h3>Aenean luctus lobortis tellus</h3>
-                                <h1>New Lifestyle</h1>
-                                <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item item-third">
-                        <div class="caption">
-                            <div class="col-md-offset-1 col-md-10">
-                                <h3>Pellentesque nec libero nisi</h3>
-                                <h1>Your Health Benefits</h1>
-                                <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
+    Html.RenderPartial("_Slider");
+}
 
     @RenderBody()
 
     <!-- ABOUT -->
 
-    @{
-        Html.RenderPartial("_AboutUs");
-    }
+  
 
 
     <!-- TEAM -->
@@ -462,6 +434,7 @@
         </div>
     </footer>
 
+    <!-- #region Scripts File -->
     <!-- SCRIPTS -->
     <script src="/Content/js/jquery.js"></script>
     <script src="/Content/js/bootstrap.min.js"></script>
@@ -471,7 +444,9 @@
     <script src="/Content/js/smoothscroll.js"></script>
     <script src="/Content/js/owl.carousel.min.js"></script>
     <script src="/Content/js/custom.js"></script>
+    <!-- #endregion -->
 
+    @RenderSection("Javascripts", false);
 </body>
 </html>
 
