--- a/Innobedded.KrankenHause.WebSite/Views/Shared/_MenuBar.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Shared/_MenuBar.cshtml
@@ -7,13 +7,13 @@
 
 <div class="collapse navbar-collapse">
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="#top" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.Home</a></li>
-        <li><a href="#about" class="smoothScroll">About Us</a></li>
-        <li><a href="#team" class="smoothScroll">Doctors</a></li>
-        <li><a href="#news" class="smoothScroll">Services</a></li>
-        <li><a href="#news" class="smoothScroll">Clinics</a></li>
-        <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-        <li class="appointment-btn"><a href="#appointment">Make an appointment</a></li>
+        <li><a href="#top" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.home</a></li>
+        <li><a href="#about" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.aboutus</a></li>
+        <li><a href="#team" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.doctors</a></li>
+        <li><a href="#news" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.services</a></li>
+        <li><a href="#news" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.clinics</a></li>
+        <li><a href="#google-map" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.contact</a></li>
+        <li class="appointment-btn"><a href="#appointment">@Innobedded.KrankenHause.WebSite.Resources.Resource.appointment</a></li>
     </ul>
 </div>
 
