--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_LoginLayout.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_LoginLayout.cshtml
@@ -18,118 +18,60 @@
     <meta name="author" content="codedthemes">
     <!--Styles -->
     <!--#region Favicon icon -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="~/Areas/Admin/Content/assets/images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="~/Areas/Admin/Content/assets/images/favicon.ico" type="image/x-icon">
 
     <!-- Google font-->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500,700" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="~/Areas/Admin/Content/assets/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!--ico Fonts-->
-    <link rel="stylesheet" type="text/css" href="assets/icon/icofont/css/icofont.css">
+    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/icon/icofont/css/icofont.css">
 
     <!-- Required Fremwork -->
-    <link rel="stylesheet" type="text/css" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/plugins/bootstrap/css/bootstrap.min.css">
 
     <!-- waves css -->
-    <link rel="stylesheet" type="text/css" href="assets/plugins/Waves/waves.min.css">
+    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/plugins/Waves/waves.min.css">
 
     <!-- Style.css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/main.css">
 
     <!-- Responsive.css-->
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/responsive.css">
 
 
-    <link rel="stylesheet" type="text/css" href="assets/css/color/color-1.min.css" id="color" />
+    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/color/color-1.min.css" id="color" />
     <!-- #endregion color css-->
 
 </head>
 
 <body>
-    <section class="login p-fixed d-flex text-center bg-primary common-img-bg">
-        <!-- Container-fluid starts -->
-        <div class="container-fluid">
-            <div class="row">
 
-                <div class="col-sm-12">
-                    <div class="login-card card-block">
-                        <form class="md-float-material">
-                            <div class="text-center">
-                                <img src="assets/images/logo-black.png" alt="logo">
-                            </div>
-                            <h3 class="text-center txt-primary">
-                                Sign In to your account
-                            </h3>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="md-input-wrapper">
-                                        <input type="email" class="md-form-control" required="required" />
-                                        <label>Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-12">
-                                    <div class="md-input-wrapper">
-                                        <input type="password" class="md-form-control" required="required" />
-                                        <label>Password</label>
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 col-xs-12">
-                                    <div class="rkmd-checkbox checkbox-rotate checkbox-ripple m-b-25">
-                                        <label class="input-checkbox checkbox-primary">
-                                            <input type="checkbox" id="checkbox">
-                                            <span class="checkbox"></span>
-                                        </label>
-                                        <div class="captions">Remember Me</div>
+    @RenderBody()
 
-                                    </div>
-                                </div>
-                                <div class="col-sm-6 col-xs-12 forgot-phone text-right">
-                                    <a href="forgot-password.html" class="text-right f-w-600"> Forget Password?</a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-10 offset-xs-1">
-                                    <button type="button" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20">LOGIN</button>
-                                </div>
-                            </div>
-                            <!-- <div class="card-footer"> -->
-                            <div class="col-sm-12 col-xs-12 text-center">
-                                <span class="text-muted">Don't have an account?</span>
-                                <a href="register2.html" class="f-w-600 p-l-5">Sign up Now</a>
-                            </div>
-
-                            <!-- </div> -->
-                        </form>
-                        <!-- end of form -->
-                    </div>
-                    <!-- end of login-card -->
-                </div>
-                <!-- end of col-sm-12 -->
-            </div>
-            <!-- end of row -->
-        </div>
-        <!-- end of container-fluid -->
-    </section>
-
+   
 
     <!-- #region Required Jqurey -->
 
-    <script src="assets/plugins/jquery/dist/jquery.min.js"></script>
-    <script src="assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-    <script src="assets/plugins/tether/dist/js/tether.min.js"></script>
+    <script src="~/Areas/Admin/Content/assets/plugins/jquery/dist/jquery.min.js"></script>
+    <script src="~/Areas/Admin/Content/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="~/Areas/Admin/Content/assets/plugins/tether/dist/js/tether.min.js"></script>
 
 
-    <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/Areas/Admin/Content/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- waves effects.js -->
-    <script src="assets/plugins/Waves/waves.min.js"></script>
+    <script src="~/Areas/Admin/Content/assets/plugins/Waves/waves.min.js"></script>
     <!-- Custom js -->
-    <script type="text/javascript" src="assets/pages/elements.js"></script>
+    <script type="text/javascript" src="~/Areas/Admin/Content/assets/pages/elements.js"></script>
 
     <!-- #endregion Required Fremwork -->
 
+
+
+    @RenderSection("Scripts", false);
 </body>
 </html>
