--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Account/Login.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Account/Login.cshtml
@@ -13,77 +13,82 @@
 
             <div class="col-sm-12">
                 <div class="login-card card-block">
-                    <form class="md-float-material">
-                        <div class="text-center">
-                            <h4 class="text-center txt-info">
+
+                    <div class="text-center">
+                       
+                            @*@Html.ActionLink("Back to website", )*@
+                        <a href="@Url.Action("index", new { area = "", controller = "Home" })">
+                            <h2 class="text-center txt-info">
                                 <i class="fa fa-h-square"></i>ealth Center
-                                </h4>
-                        </div>
-                        <h3 class="text-center txt-primary">
-                            Sign In to your account
-                        </h3>
+                            </h2>
+                        </a>
 
-                        @using (Html.BeginForm())
-                        {
-                            @Html.AntiForgeryToken()
+                    </div>
+                    <h3 class="text-center txt-primary">
+                        Sign In to your account
+                    </h3>
+                    <hr />
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
 
-                            <div class="form-horizontal align-content-center">
+                        <div class="form-horizontal align-content-center">
 
-                                <hr />
-                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="md-input-wrapper">
-                                            <div class="form-group">
 
-                                                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                                                <div class="col-md-10">
-                                                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <br />
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10">
-                                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                                    </div>
-                                </div>
-                                <br />
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.Remember, htmlAttributes: new { @class = "control-label col-md-2" })
-                                    <div class="col-md-10" >
-                                        <div class="checkbox">
-                                            @Html.EditorFor(model => model.Remember)
-                                            @Html.ValidationMessageFor(model => model.Remember, "", new { @class = "text-danger" })
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="form-group">
 
-                                <div class="form-group">
-                                    <div class="col-md-offset-2 col-md-10">
-                                        <div class="col-xs-10 offset-xs-1">
-                                            <input type="button" value="Login" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20" />
-                                        </div>
-                                    </div>
+                                @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-3" })
+
+                                <div class="col-md-9">
+                                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
+                            <br />
+                            <br />
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-3" })
+                                <div class="col-md-9">
+                                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+                            <br />
+                            <div class="form-group">
+                                @Html.LabelFor(model => model.Remember, htmlAttributes: new { @class = "control-label col-md-4" })
+                                <div class="col-md-6">
+                                    <div class="checkbox">
+                                        @Html.EditorFor(model => model.Remember)
+                                        @Html.ValidationMessageFor(model => model.Remember, "", new { @class = "text-danger" })
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                <br />
+              
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-12">
+                                    <div class="col-xs-12 offset-xs-12">
+                                        <input type="submit" value="Login" class="btn btn-primary btn-md btn-block waves-effect text-center m-b-20" />
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-                        }
 
-                        <!-- </div> -->
-                    </form>
+                    }
 
-                    <div>
-                        @Html.ActionLink("Back to website", "index",new { area="",controller= "Home" })
-                    </div>
+
+                    <!-- </div> -->
                     <!-- end of form -->
+                </div>
+                <br />
+                <div class="txt-danger">
+                   
                 </div>
                 <!-- end of login-card -->
             </div>
