--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_Navbar.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_Navbar.cshtml
@@ -104,7 +104,9 @@
                             <div class="dropdown-divider m-0"></div>
                         </li>
                         <li><a href="#"><i class="icon-lock"></i> Lock Screen</a></li>
-                        <li><a href="login1.html"><i class="icon-logout"></i> Logout</a></li>
+
+
+                        <li><a href="@Url.Action("logout")"><i class="icon-logout"></i> Logout</a></li>
 
                     </ul>
                 </li>
