--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_Navbar.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_Navbar.cshtml
@@ -93,7 +93,7 @@
                 <li class="dropdown">
                     <a href="#!" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" class="dropdown-toggle drop icon-circle drop-image">
                         <span><img class="img-circle " src="~/Areas/Admin/Content/assets/images/avatar-1.png" style="width:40px;" alt="User Image"></span>
-                        <span>John <b>Doe</b> <i class=" icofont icofont-simple-down"></i></span>
+                        <span>Welcome <b>@User.Identity.Name</b> <i class=" icofont icofont-simple-down"></i></span>
 
                     </a>
                     <ul class="dropdown-menu settings-menu">
@@ -103,7 +103,7 @@
                         <li class="p-0">
                             <div class="dropdown-divider m-0"></div>
                         </li>
-                        <li><a href="#"><i class="icon-lock"></i> Lock Screen</a></li>
+                        @*<li><a href="#"><i class="icon-lock"></i> Lock Screen</a></li>*@
 
 
                         <li><a href="@Url.Action("logout")"><i class="icon-logout"></i> Logout</a></li>
