--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_SideNav.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_SideNav.cshtml
@@ -1,6 +1,8 @@
 ﻿<aside class="main-sidebar hidden-print ">
     <section class="sidebar" id="sidebar-scroll">
         <!-- Sidebar Menu-->
+
+        @if (User.Identity.IsAuthenticated) {
         <ul class="sidebar-menu">
             <li class="nav-level">--- Navigation</li>
             <li class="active treeview">
@@ -125,6 +127,7 @@
                 </ul>
             </li>
         </ul>
+        }
     </section>
 </aside>
 
