Create Doctors Controller and show self Partial View

--- a/Innobedded.KrankenHause.WebSite/Views/Home/Index.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿<!-- HEADER -->
+
+
 @{
     Html.RenderPartial("_Header");
 }
@@ -23,9 +25,12 @@
 }
 
 <!--Doctors-->
+
 @{
-    Html.RenderPartial("_Doctors");
+    Html.RenderAction("_Doctors", "Doctors");
+    
 }
+
 
 <!--Services-->
 @{
@@ -42,8 +47,6 @@
 @{
     Html.RenderPartial("_Appointments");
 }
-
-
 
 
 <!--#region Javascript and Jquery code for Index UI Handele-->
