--- a/Innobedded.KrankenHause.WebSite/Views/Doctors/_Doctors.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Doctors/_Doctors.cshtml
@@ -1,14 +1,19 @@
 ﻿
+
 <section id="doctors" data-stellar-background-ratio="1">
     <div class="container">
         <div class="row">
 
             <div class="col-md-6 col-sm-6">
                 <div class="about-info">
-                    <h2 class="wow fadeInUp" data-wow-delay="0.1s">@Innobedded.KrankenHause.WebSite.Resources.Resource.doctors</h2>
+            
+                    <h2 class="wow fadeInUp" data-wow-delay="0.1s">
+
+                        @Innobedded.KrankenHause.WebSite.Resources.Resource.doctors
+                    </h2>
                 </div>
             </div>
-
+            
             <div class="clearfix"></div>
 
 
