Change and Complate DoctorsViewModel and Controller and _Doctors Partial

--- a/Innobedded.KrankenHause.WebSite/Views/Home/Index.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
 <!-- ABOUT -->
 @{
-    Html.RenderPartial("_AboutUs");
+    Html.RenderAction("_AboutUs","Aboutus");
 }
 
 <!--Doctors-->
@@ -34,18 +34,18 @@
 
 <!--Services-->
 @{
-    Html.RenderPartial("_Services");
+    Html.RenderAction("_Services","Services");
 }
 
 <!--Clinics-->
 @{
-    Html.RenderPartial("_Clinics");
+    Html.RenderAction("_Clinics","Clinics");
 }
 
 
 <!--Appointment-->
 @{
-    Html.RenderPartial("_Appointments");
+    Html.RenderAction("_Appointments","Appointment");
 }
 
 
