--- a/Innobedded.KrankenHause.WebSite/Views/Doctors/_Doctors.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Doctors/_Doctors.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model IEnumerable<Innobedded.KrankenHause.Domain.ViewModels.DoctorsViewModel>
 
 <section id="doctors" data-stellar-background-ratio="1">
     <div class="container">
@@ -6,79 +6,111 @@
 
             <div class="col-md-6 col-sm-6">
                 <div class="about-info">
-            
+
                     <h2 class="wow fadeInUp" data-wow-delay="0.1s">
 
                         @Innobedded.KrankenHause.WebSite.Resources.Resource.doctors
                     </h2>
                 </div>
             </div>
-            
+
             <div class="clearfix"></div>
 
+            @{
+                int i = 1;
+                foreach (var item in Model)
+                {
+                    if (i == 4)
+                    {
+                        break;
+                    }
+                    <div class="col-md-4 col-sm-6">
+                        <div class="team-thumb wow fadeInUp" data-wow-delay="0.2s">
+                            <img src="~/Content/images/Doctors/@item.Picture" class="img-responsive" alt="">
 
+                            <div class="team-info">
+                               
+                                <h3>
+                                    <i class="fa fa-user-circle" aria-hidden="true"></i>
+                                    @item.Name @item.Family
+                                </h3>
+                                <p>@item.FachTitle</p>
 
+                                <p><i class="fa fa-building-o" aria-hidden="true"></i>&ensp; @item.KlinikName</p>
+                                <p><i class="fa fa-list-alt" aria-hidden="true"></i> &ensp; @item.Description</p>
 
-            <div class="col-md-4 col-sm-6">
-                <div class="team-thumb wow fadeInUp" data-wow-delay="0.2s">
-                    <img src="/Content/images/team-image1.jpg" class="img-responsive" alt="">
+                                <div class="team-contact-info">
+                                    <p><i class="fa fa-phone"></i> @item.Telefon</p>
+                                    <p><i class="fa fa-envelope-o"></i> <a href="#">@item.Email</a></p>
+                                </div>
+                                <ul class="social-icon">
+                                    <li><a href="#" class="fa fa-linkedin-square"></a></li>
+                                    <li><a href="mailto:@item.Email" class="fa fa-envelope-o"></a></li>
+                                </ul>
+                            </div>
 
-                    <div class="team-info">
-                        <h3>Nate Baston</h3>
-                        <p>General Principal</p>
-                        <div class="team-contact-info">
-                            <p><i class="fa fa-phone"></i> 010-020-0120</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="#">general@company.com</a></p>
                         </div>
-                        <ul class="social-icon">
-                            <li><a href="#" class="fa fa-linkedin-square"></a></li>
-                            <li><a href="#" class="fa fa-envelope-o"></a></li>
-                        </ul>
                     </div>
 
-                </div>
-            </div>
 
-            <div class="col-md-4 col-sm-6">
-                <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
-                    <img src="/Content/images/team-image2.jpg" class="img-responsive" alt="">
 
-                    <div class="team-info">
-                        <h3>Jason Stewart</h3>
-                        <p>Pregnancy</p>
-                        <div class="team-contact-info">
-                            <p><i class="fa fa-phone"></i> 010-070-0170</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="#">pregnancy@company.com</a></p>
+                }
+            }
+
+
+            <!--#region
+
+
+
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
+                        <img src="/Content/images/team-image2.jpg" class="img-responsive" alt="">
+
+                        <div class="team-info">
+                            <h3>Jason Stewart</h3>
+                            <p>Pregnancy</p>
+                            <div class="team-contact-info">
+                                <p><i class="fa fa-phone"></i> 010-070-0170</p>
+                                <p><i class="fa fa-envelope-o"></i> <a href="#">pregnancy@company.com</a></p>
+                            </div>
+                            <ul class="social-icon">
+                                <li><a href="#" class="fa fa-facebook-square"></a></li>
+                                <li><a href="#" class="fa fa-envelope-o"></a></li>
+                                <li><a href="#" class="fa fa-flickr"></a></li>
+                            </ul>
                         </div>
-                        <ul class="social-icon">
-                            <li><a href="#" class="fa fa-facebook-square"></a></li>
-                            <li><a href="#" class="fa fa-envelope-o"></a></li>
-                            <li><a href="#" class="fa fa-flickr"></a></li>
-                        </ul>
+
                     </div>
-
                 </div>
-            </div>
 
-            <div class="col-md-4 col-sm-6">
-                <div class="team-thumb wow fadeInUp" data-wow-delay="0.6s">
-                    <img src="/Content/images/team-image3.jpg" class="img-responsive" alt="">
+                <div class="col-md-4 col-sm-6">
+                    <div class="team-thumb wow fadeInUp" data-wow-delay="0.6s">
+                        <img src="/Content/images/team-image3.jpg" class="img-responsive" alt="">
 
-                    <div class="team-info">
-                        <h3>Miasha Nakahara</h3>
-                        <p>Cardiology</p>
-                        <div class="team-contact-info">
-                            <p><i class="fa fa-phone"></i> 010-040-0140</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="#">cardio@company.com</a></p>
+                        <div class="team-info">
+                            <h3>Miasha Nakahara</h3>
+                            <p>Cardiology</p>
+                            <div class="team-contact-info">
+                                <p><i class="fa fa-phone"></i> 010-040-0140</p>
+                                <p><i class="fa fa-envelope-o"></i> <a href="#">cardio@company.com</a></p>
+                            </div>
+                            <ul class="social-icon">
+                                <li><a href="#" class="fa fa-twitter"></a></li>
+                                <li><a href="#" class="fa fa-envelope-o"></a></li>
+                            </ul>
                         </div>
-                        <ul class="social-icon">
-                            <li><a href="#" class="fa fa-twitter"></a></li>
-                            <li><a href="#" class="fa fa-envelope-o"></a></li>
-                        </ul>
-                    </div>
 
+                    </div>
                 </div>
-            </div>
+
+
+
+
+
+
+
+
+        -->
 
         </div>
     </div>
