--- a/Innobedded.KrankenHause.WebSite/Views/Clinics/_Clinics.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Clinics/_Clinics.cshtml
@@ -1,4 +1,6 @@
-﻿<section id="clinics" data-stellar-background-ratio="2.5">
+﻿
+
+<section id="clinics" data-stellar-background-ratio="2.5">
     <div class="container">
         <div class="row">
 
@@ -8,6 +10,8 @@
                     <h2>@Innobedded.KrankenHause.WebSite.Resources.Resource.clinics</h2>
                 </div>
             </div>
+
+
 
             <div class="col-md-4 col-sm-6">
 
