--- a/Innobedded.KrankenHause.WebSite/Views/Services/_Services.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Services/_Services.cshtml
@@ -1,4 +1,4 @@
-﻿@model Innobedded.KrankenHause.Data.Entities.KlinikService
+﻿@model IEnumerable<Innobedded.KrankenHause.Data.Entities.KlinikService>
 
 
 <section id="services" data-stellar-background-ratio="2.5">
@@ -11,29 +11,44 @@
                     <h2>@Innobedded.KrankenHause.WebSite.Resources.Resource.services</h2>
                 </div>
             </div>
+            @{
+                int counter = 1;
+                foreach (var item in Model)
+                {
+                    if (counter == 4)
+                    {
+                        break;
+                    }
+                    <div class="col-md-4 col-sm-6">
 
-            <div class="col-md-4 col-sm-6">
-               
-                <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
-                    <a href="news-detail.html">
-                        <img src="/Content/images/news-image1.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="news-info">
-                        <span>March 08, 2018</span>
-                        <h3><a href="news-detail.html">About Amazing Technology</a></h3>
-                        <p>Maecenas risus neque, placerat volutpat tempor ut, vehicula et felis.</p>
-                        <div class="author">
-                            <img src="/Content/images/author-image.jpg" class="img-responsive" alt="">
-                            <div class="author-info">
-                                <h5>Jeremie Carlson</h5>
-                                <p>CEO / Founder</p>
+                        <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
+                            <a href="news-detail.html">
+                                <img src="~/Content/images/KlinikServices/@item.Picture" class="img-responsive" alt="@item.Title">
+                            </a>
+                            <div class="news-info">
+                                <span>@item.Cost.ToString() &euro;</span>
+                                <h3><a href='@Url.Action("ServiceDetails","Services",new { id=item.ServiceID})'>@item.Title</a></h3>
+                                <p>@item.Description</p>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <div class="col-md-4 col-sm-6">
+                    counter++;
+
+                }
+            }
+
+
+
+
+        </div>
+    </div>
+</section>
+
+
+<!--#region Div for Services
+
+                <div class="col-md-4 col-sm-6">
 
                 <div class="news-thumb wow fadeInUp" data-wow-delay="0.6s">
                     <a href="news-detail.html">
@@ -55,26 +70,25 @@
             </div>
 
             <div class="col-md-4 col-sm-6">
-                <!-- NEWS THUMB -->
-                <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
-                    <a href="news-detail.html">
-                        <img src="/Content/images/news-image3.jpg" class="img-responsive" alt="">
-                    </a>
-                    <div class="news-info">
-                        <span>January 27, 2018</span>
-                        <h3><a href="news-detail.html">Review Annual Medical Research</a></h3>
-                        <p>Vivamus non nulla semper diam cursus maximus. Pellentesque dignissim.</p>
-                        <div class="author">
-                            <img src="/Content/images/author-image.jpg" class="img-responsive" alt="">
-                            <div class="author-info">
-                                <h5>Andrio Abero</h5>
-                                <p>Online Advertising</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          
+<div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
+    <a href="news-detail.html">
+        <img src="/Content/images/news-image3.jpg" class="img-responsive" alt="">
+    </a>
+    <div class="news-info">
+        <span>January 27, 2018</span>
+        <h3><a href="news-detail.html">Review Annual Medical Research</a></h3>
+        <p>Vivamus non nulla semper diam cursus maximus. Pellentesque dignissim.</p>
+        <div class="author">
+            <img src="/Content/images/author-image.jpg" class="img-responsive" alt="">
+            <div class="author-info">
+                <h5>Andrio Abero</h5>
+                <p>Online Advertising</p>
             </div>
-
         </div>
     </div>
-</section>
+</div>
+            </div>
+
+
+    -->
