--- a/Innobedded.KrankenHause.WebSite/Views/Shared/_MenuBar.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Shared/_MenuBar.cshtml
@@ -15,16 +15,18 @@
 
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#top" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.home</a></li>
-                <li><a href="#about" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.aboutus</a></li>
-                <li><a href="#doctors" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.doctors</a></li>
-                <li><a href="#services" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.services</a></li>
-                <li><a href="#clinics" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.clinics</a></li>
-                <li><a href="#google-map" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.contact</a></li>
-                <li class="appointment-btn"><a href="#appointment">@Innobedded.KrankenHause.WebSite.Resources.Resource.appointment</a></li>
+                <li><a id="_top" href="/home/#top" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.home</a></li>
+                <li><a id="_aboutus" href="/home/#about" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.aboutus</a></li>
+                <li><a href="/home/#doctors" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.doctors</a></li>
+                <li><a href="/home/#services" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.services</a></li>
+                <li><a href="/home/#clinics" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.clinics</a></li>
+                <li><a href="/home/#google-map" class="smoothScroll">@Innobedded.KrankenHause.WebSite.Resources.Resource.contact</a></li>
+                <li class="appointment-btn"><a href="/home/#appointment">@Innobedded.KrankenHause.WebSite.Resources.Resource.appointment</a></li>
             </ul>
         </div>
 
 
     </div>
 </section>
+
+
