--- a/Innobedded.KrankenHause.WebSite/Views/Appointment/_Appointments.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Appointment/_Appointments.cshtml
@@ -34,13 +34,13 @@
                         </div>
                         
                         <div class="col-md-6 col-sm-6">
-                            <label for="select">Select Department</label>
+                            @*<label for="select">Select Department</label>
                             <select class="form-control">
                                 <option>General Health</option>
                                 <option>Cardiology</option>
                                 <option>Dental</option>
                                 <option>Medical Research</option>
-                            </select>
+                            </select>*@
                         </div>
 
                         <div class="col-md-12 col-sm-12">
