--- a/Innobedded.KrankenHause.WebSite/Views/Home/Index.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Home/Index.cshtml
@@ -62,6 +62,11 @@
             if (document.readyState === 'complete') {
                 document.getElementById('_top').setAttribute("href", "#top");
                 document.getElementById('_aboutus').setAttribute("href", "#about");
+                document.getElementById('_doctors').setAttribute("href", "#doctors");
+                document.getElementById('_services').setAttribute("href", "#services");
+                document.getElementById('_clinics').setAttribute("href", "#clinics");
+                
+                document.getElementById('_appointment').setAttribute("href", "#appointment");
             }
         }
             
