--- a/Innobedded.KrankenHause.WebSite/Views/Appointment/_Appointments.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Views/Appointment/_Appointments.cshtml
@@ -9,17 +9,19 @@
 
             <div class="col-md-6 col-sm-6">
                 <!-- CONTACT FORM HERE -->
-                <form id="appointment-form" role="form" method="post" action="#">
+                <form id="appointment-form" role="form" method="post" action="/Appointment/SetAppointment">
 
                     <!-- SECTION TITLE -->
                     <div class="section-title wow fadeInUp" data-wow-delay="0.4s">
                         <h2>@Innobedded.KrankenHause.WebSite.Resources.Resource.appointment</h2>
                     </div>
-
+                    <div>
+                        <h4 class="red-colors">@ViewBag.Error</h4>
+                    </div>
                     <div class="wow fadeInUp" data-wow-delay="0.8s">
                         <div class="col-md-6 col-sm-6">
                             <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
+                            <input type="text" class="form-control" id="name" name="name" placeholder="Full Name" >
                         </div>
 
                         <div class="col-md-6 col-sm-6">
@@ -29,26 +31,26 @@
 
                         <div class="col-md-6 col-sm-6">
                             <label for="date">Select Date</label>
-                            <input type="date" name="date" value="" class="form-control" min="@DateTime.Now.AddDays(-1)">
-                            
+                            <input type="date" name="mydate" value="" class="form-control" min="@DateTime.Now.AddDays(-1)">
+
                         </div>
-                        
+
                         <div class="col-md-6 col-sm-6">
                             @*<label for="select">Select Department</label>
-                            <select class="form-control">
-                                <option>General Health</option>
-                                <option>Cardiology</option>
-                                <option>Dental</option>
-                                <option>Medical Research</option>
-                            </select>*@
+                                <select class="form-control">
+                                    <option>General Health</option>
+                                    <option>Cardiology</option>
+                                    <option>Dental</option>
+                                    <option>Medical Research</option>
+                                </select>*@
                         </div>
 
                         <div class="col-md-12 col-sm-12">
                             <label for="telephone">Phone Number</label>
-                            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone">
+                            <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone">
                             <label for="Message">Additional Message</label>
-                            <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea>
-                            <button type="submit" class="form-control" id="cf-submit" name="submit">Submit Button</button>
+                            <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"  onfocus="test()"></textarea>
+                            <button type="submit" class="form-control" id="cf-submit" name="submit" disabled onmouseover="test()" >Reserve</button>
                         </div>
                     </div>
                 </form>
@@ -57,3 +59,30 @@
         </div>
     </div>
 </section>
+
+
+<!-- Button trigger modal -->
+@*<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+    Launch demo modal
+</button>*@
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Appointment Errors</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal_body">
+                
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                
+            </div>
+        </div>
+    </div>
+</div>
