--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Faches/Create.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Faches/Create.cshtml
@@ -7,12 +7,12 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm(new { htmlAttributes = new { @class = "md-float-material" } }))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Hier ist Create Page Kirrrrian</h4>
+    <h4>Hier ist Create Page </h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -25,16 +25,40 @@
     
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="button" value="Create" class="btn btn-success" onclick="tabrik()" />
         </div>
     </div>
 </div>
 }
-
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <br />
+    <hr />
 </div>
+
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+<script type="text/javascript">
+
+
+    function tabrik() {
+        alert("JSDD");
+    
+    $(document).ready(function () {
+             $.ajax({
+            type: "POST",
+            url: "@Url.Action("Create","faches")",
+            data: { FachID: "@Model.FachID", Title: "@Model.Title" },
+            dataType: "text",
+            success: function (msg) {
+                console.log(msg);
+            },
+            error: function (req, status, error) {
+                console.log(msg);
+            }
+        });
+    });
+    }
+</script>
