--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Quantum Able Bootstrap 4 Admin Dashboard Template</title>
+    <title>@User.Identity.Name</title>
     <!-- HTML5 Shim and Respond.js IE9 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -55,7 +55,7 @@
     <div class="wrapper">
 
         @RenderBody()
-        
+
 
 
 
@@ -110,6 +110,7 @@
 
 
     @RenderSection("js", false);
+    
 
 </body>
 
