--- a/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Innobedded.KrankenHause.WebSite/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -33,32 +33,22 @@
     <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/plugins/bootstrap/css/bootstrap.min.css">
 
     <!-- Chartlist chart css -->
-    <link rel="stylesheet" href="~/Areas/Admin/Content/assets/plugins/chartist/dist/chartist.css" type="text/css" media="all">
+    <!--<link rel="stylesheet" href="~/Areas/Admin/Content/assets/plugins/chartist/dist/chartist.css" type="text/css" media="all">-->
 
     <!-- Weather css -->
     <link href="~/Areas/Admin/Content/assets/css/svg-weather.css" rel="stylesheet">
 
 
     <!-- Style.css -->
-    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/main.css">
+    <!--<link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/main.css">-->
 
     <!-- Responsive.css-->
-    <link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/responsive.css">
-
+    <!--<link rel="stylesheet" type="text/css" href="~/Areas/Admin/Content/assets/css/responsive.css">-->
 </head>
-
-<body class="sidebar-mini fixed">
-    <div class="loader-bg">
-        <div class="loader-bar">
-        </div>
-    </div>
-    <div class="wrapper">
-
-       
-
-        
-
+<body>
+    <div>
         @RenderBody()
+        
 
 
 
@@ -70,15 +60,15 @@
     <section>
         <script src="~/Areas/Admin/Content/assets/plugins/Jquery/dist/jquery.min.js"></script>
 
-        <script src="~/Areas/Admin/Content/assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-        <script src="~/Areas/Admin/Content/assets/plugins/tether/dist/js/tether.min.js"></script>
+        
+        
 
         <!-- Required Fremwork -->
         <script src="~/Areas/Admin/Content/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
 
         <!-- Scrollbar JS-->
-        <script src="~/Areas/Admin/Content/assets/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
-        <script src="~/Areas/Admin/Content/assets/plugins/jquery.nicescroll/jquery.nicescroll.min.js"></script>
+        @*<script src="~/Areas/Admin/Content/assets/plugins/jquery-slimscroll/jquery.slimscroll.js"></script>
+        <script src="~/Areas/Admin/Content/assets/plugins/jquery.nicescroll/jquery.nicescroll.min.js"></script>*@
 
         <!--classic JS-->
         <script src="~/Areas/Admin/Content/assets/plugins/classie/classie.js"></script>
@@ -90,32 +80,22 @@
         <script src="~/Areas/Admin/Content/assets/plugins/jquery-sparkline/dist/jquery.sparkline.js"></script>
 
         <!-- Counter js  -->
-        <script src="~/Areas/Admin/Content/assets/plugins/waypoints/jquery.waypoints.min.js"></script>
-        <script src="~/Areas/Admin/Content/assets/plugins/countdown/js/jquery.counterup.js"></script>
+        <!--<script src="~/Areas/Admin/Content/assets/plugins/waypoints/jquery.waypoints.min.js"></script>
+        <script src="~/Areas/Admin/Content/assets/plugins/countdown/js/jquery.counterup.js"></script>-->
 
         <!-- Echart js -->
-        <script src="~/Areas/Admin/Content/assets/plugins/charts/echarts/js/echarts-all.js"></script>
+        <!--<script src="~/Areas/Admin/Content/assets/plugins/charts/echarts/js/echarts-all.js"></script>
 
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com/highcharts-3d.js"></script>
+        <script src="https://code.highcharts.com/highcharts-3d.js"></script>-->
 
         <!-- custom js -->
-        <script type="text/javascript" src="~/Areas/Admin/Content/assets/js/main.min.js"></script>
+        <!--<script type="text/javascript" src="~/Areas/Admin/Content/assets/js/main.min.js"></script>
         <script type="text/javascript" src="~/Areas/Admin/Content/assets/pages/dashboard.js"></script>
         <script type="text/javascript" src="~/Areas/Admin/Content/assets/pages/elements.js"></script>
-        <script src="~/Areas/Admin/Content/assets/js/menu.min.js"></script>
+        <script src="~/Areas/Admin/Content/assets/js/menu.min.js"></script>-->
 
     </section>
-
-
-
-
-
-
-    @RenderSection("js", false);
-    
-
 </body>
-
 </html>
